# PocketDarwin

./: .gitignore  .gitmodules  README.md
.github/workflows/: discord-activity.yml
OCMobile/: Makefile
OCMobile/Platform/: Kextld.c
System/: CMakeLists.txt  xnubuild.sh
System/Applications/freeboard/: configure.ac  main.cpp
System/Applications/microfinder/: CocoaMode.m  Makefile.am  OSCommandLine.m  configure.ac  finder.m
System/Boot/interlude/: darwin_interlude  darwin_interlude.c
System/Drivers/AndroidDeviceGeneralController/AndroidDeviceGeneralController/: AndroidDeviceGeneralController.cpp  DeviceTreeParsing.cpp  DeviceTreeParsing.hpp  Framebuffer.cpp  Framebuffer.hpp  Info.plist
System/Drivers/AndroidDeviceGeneralController/AndroidDeviceGeneralController.xcodeproj/: project.pbxproj
System/Drivers/AndroidDeviceGeneralController/AndroidDeviceGeneralController.xcodeproj/project.xcworkspace/xcuserdata/oaky.xcuserdatad/: UserInterfaceState.xcuserstate
System/Drivers/AndroidDeviceGeneralController/Documentation.docc/: Documentation.md
System/Frameworks/L2DIOBridgeKit/: l2dkit.cmake
System/Frameworks/L2DIOBridgeKit/DarwinKit/: L2DKitBridge.mm
System/Frameworks/L2DIOBridgeKit/DarwinKit/LaunchDaemons/: org.pocketdarwin.l2dkit.plist
System/Frameworks/L2DIOBridgeKit/LinuxKit/: l2dkit-hostd.cpp
System/Frameworks/L2DIOBridgeKit/LinuxKit/include/: LinuxKitHeaders.h
System/Frameworks/L2DIOBridgeKit/LinuxKit/systemd/: l2dkit-hostd.service
System/Mobile Enviroment/Frameworks/Mobile Controller/Mobile Controller/: CoreMobile.h  Mobile_Controller.h
System/darwinKernel/: Makefile  xnu-arm-jit-build.sh  xnu-jit-patcher.rb
System/darwinKernel/patches/: 0001-change-build-arch-to-standard-arm64.patch  newxnu.patch
System/darwinKernel/patches/xnu-arm-armpba8/: 0001-restore-stdint-header.patch  0002-mig-destroy-from-kernel-compat.patch  0003-arm-modern-clang-compat.patch  0004-missing-prototypes-compat.patch  0005-signature-fixes-and-fallbacks.patch  0006-arm-kernel-prototype-and-vmoffset-fixes.patch  0007-arm-build-wip-through-assembler-stage.patch  0008-add-generic-machine-configs.patch  series
