# ------------------------------------------------------------------------
#  RAVYNOS BUILD SYSTEM - Kernel and Extensions
# ------------------------------------------------------------------------

cmake_minimum_required(VERSION 4.0.0)
project(ravynOS_Kernel)

string(TOUPPER "${CMAKE_SYSTEM_PROCESSOR}" MACHINE)
set(AVAILABILITY_PL ${RAVYN_SDKROOT}/usr/local/libexec/availability.pl)
set(AVAILABILITY_PL_PATH ${RAVYN_SDKROOT}/usr/local/libexec/availability.pl)
set(SEED_DEFINES -DRC_ENABLE_XNU_PRODUCT_INFO_FILTER) 
set(PATH $ENV{PATH})

if("${KERNEL_CONFIGS}" STREQUAL "DEBUG")
    set(DEBUG ".debug")
else()
    set(DEBUG "")
endif()

if(CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
    set(HOST_CODESIGN=/bin/true)
    set(IIG /bin/true)
    file(GLOB IIG_HDRS xnu/iokit/DriverKit/*.h)
    file(COPY ${IIG_HDRS} DESTINATION 
        ${CMAKE_CURRENT_BINARY_DIR}/xnu/${KERNEL_CONFIGS}_${ARCH_CONFIGS}/iokit/DriverKit/)
endif()

ExternalProject_Add(xnu_headers
    SOURCE_DIR ${ROOT_SOURCE_DIR}/Kernel/xnu
    BINARY_DIR ${ROOT_BINARY_DIR}/Kernel/xnu
    DEPENDS BootstrapTools
    CONFIGURE_COMMAND ""
    BUILD_COMMAND
    	PATH=${PATH} ${GMAKE} -C <SOURCE_DIR> LOGCOLORS=y
    	    PLATFORM=MacOSX BUILD_LTO=0 BUILD_PROFILE=0 BUILD_WERROR=0 DO_CTFMERGE=0
    	    SDKVERSION=${CMAKE_MACOSX_MIN_VERSION} SRCROOT=<SOURCE_DIR>
    	    OBJROOT=<BINARY_DIR> DSTROOT=${RAVYN_SDKROOT}
            MIGCOM=${MIGCOM} MIG=${MIG} IIG=${IIG} CC=${CC} CXX=${CXX}
            UNIFDEF=${UNIFDEF} CTFCONVERT=${CTFCONVERT} CTFMERGE=${CTFMERGE}
            CTFINSERT=${CTFINSERT} AVAILABILITY_PL=${AVAILABILITY_PL}
            AVAILABILITY_PL_PATH=${AVAILABILITY_PL_PATH} XCRUN=${XCRUN}
            KERNEL_CONFIGS=${KERNEL_CONFIGS} ARCH_CONFIGS=${ARCH_CONFIGS}
            DEVELOPER_DIR=${ROOT_BINARY_DIR}/Developer
            SYMROOT=${ROOT_BINARY_DIR} HOST_CC=${HOST_CC}
            HOST_CXX=${HOST_CXX} HOST_LD=${HOST_LD}
    	    installhdrs
    INSTALL_COMMAND
        PATH=${PATH} ${GMAKE} -C <SOURCE_DIR> LOGCOLORS=y
    	    PLATFORM=MacOSX BUILD_LTO=0 BUILD_PROFILE=0 BUILD_WERROR=0 DO_CTFMERGE=0
    	    SDKVERSION=${CMAKE_MACOSX_MIN_VERSION} SRCROOT=<SOURCE_DIR>
    	    OBJROOT=<BINARY_DIR> DSTROOT=${ROOT_BINARY_DIR}/sysroot
            MIGCOM=${MIGCOM} MIG=${MIG} IIG=${IIG} CC=${CC} CXX=${CXX}
            UNIFDEF=${UNIFDEF} CTFCONVERT=${CTFCONVERT} CTFMERGE=${CTFMERGE}
            CTFINSERT=${CTFINSERT} AVAILABILITY_PL=${AVAILABILITY_PL}
            AVAILABILITY_PL_PATH=${AVAILABILITY_PL_PATH} XCRUN=${XCRUN}
            KERNEL_CONFIGS=${KERNEL_CONFIGS} ARCH_CONFIGS=${ARCH_CONFIGS}
            DEVELOPER_DIR=${ROOT_BINARY_DIR}/Developer
            SYMROOT=${ROOT_BINARY_DIR} HOST_CC=${HOST_CC}
            HOST_CXX=${HOST_CXX} HOST_LD=${HOST_LD}
    	    installhdrs
)

ExternalProject_Add(xnu
    EXCLUDE_FROM_ALL
    SOURCE_DIR ${ROOT_SOURCE_DIR}/Kernel/xnu
    BINARY_DIR ${ROOT_BINARY_DIR}/Kernel/xnu
    STEP_TARGETS build install
    CONFIGURE_COMMAND ""
    BUILD_COMMAND ""
    	${GMAKE} -C <SOURCE_DIR>
            SDKROOT=${RAVYN_SDKROOT} LOGCOLORS=y
    	    PLATFORM=MacOSX BUILD_LTO=0 BUILD_WERROR=0 DO_CTFMERGE=0
    	    SDKVERSION=${CMAKE_MACOSX_MIN_VERSION} SRCROOT=<SOURCE_DIR>
    	    OBJROOT=<BINARY_DIR> DSTROOT=${RAVYN_SDKROOT}
    	    SYMROOT=${ROOT_BINARY_DIR} BUILD_STATIC_LINK=1
            MIGCOM=${MIGCOM} MIG=${MIG} IIG=${IIG} CC=${CC} CXX=${CXX}
            UNIFDEF=${UNIFDEF} CTFCONVERT=${CTFCONVERT} CTFMERGE=${CTFMERGE}
            CTFINSERT=${CTFINSERT} AR=${AR} NM=${NM} NMEDIT=${NMEDIT}
            DSYMUTIL=${DSYMUTIL} LIPO=${LIPO} STRIP=${STRIP} AS=${AS}
            AVAILABILITY_PL=${AVAILABILITY_PL} MACHINE=${MACHINE}
            AVAILABILITY_PL_PATH=${AVAILABILITY_PL_PATH} SDKROOT=macosx
            DEVELOPER_DIR=${ROOT_BINARY_DIR}/Developer XCRUN=${XCRUN}
            KERNEL_CONFIGS=${KERNEL_CONFIGS} ARCH_CONFIGS=${ARCH_CONFIGS}
            HOST_CC=${HOST_CC} HOST_CXX=${HOST_CXX} HOST_LD=${HOST_LD}
    	    VERBOSE=YES all
    INSTALL_COMMAND ""
        ${GMAKE} -C <SOURCE_DIR>
            SDKROOT=${RAVYN_SDKROOT} LOGCOLORS=y
            PLATFORM=MacOSX BUILD_LTO=0 BUILD_WERROR=0 DO_CTFMERGE=0
            SDKVERSION=${CMAKE_MACOSX_MIN_VERSION} SRCROOT=<SOURCE_DIR>
            OBJROOT=<BINARY_DIR> DSTROOT=${ROOT_BINARY_DIR}/sysroot
            MIGCOM=${MIGCOM} MIG=${MIG} IIG=${IIG} CC=${CC} CXX=${CXX}
            UNIFDEF=${UNIFDEF} CTFCONVERT=${CTFCONVERT} CTFMERGE=${CTFMERGE}
            CTFINSERT=${CTFINSERT} AR=${AR} NM=${NM} NMEDIT=${NMEDIT}
            DSYMUTIL=${DSYMUTIL} LIPO=${LIPO} STRIP=${STRIP} AS=${AS}
            DEVELOPER_DIR=${ROOT_BINARY_DIR}/Developer XCRUN=${XCRUN}
            AVAILABILITY_PL=${AVAILABILITY_PL} MACHINE=${MACHINE}
            AVAILABILITY_PL_PATH=${AVAILABILITY_PL_PATH}
            KERNEL_CONFIGS=${KERNEL_CONFIGS} ARCH_CONFIGS=${ARCH_CONFIGS}
            HOST_CC=${HOST_CC} HOST_CXX=${HOST_CXX} HOST_LD=${HOST_LD}
            install && ${CMAKE_COMMAND} -E make_directory 
            ${RAVYN_SDKROOT}/System/Library/Kernels && ${CMAKE_COMMAND} -E 
            copy <BINARY_DIR>/${KERNEL_CONFIGS}_${ARCH_CONFIGS}/kernel${DEBUG}.dSYM
            ${RAVYN_SDKROOT}/System/Library/Kernels/
	DEPENDS xnu_headers
)

add_subdirectory(xnu/libkern/kmod libkmod)
add_subdirectory(Extensions)
#add_subdirectory(kext_tools)